# script_lang

./: Cargo.toml  README.md  new 29.txt  old.txt  workspace.code-workspace
examples/: ccexpr_test.rs  cexpr_test.rs  clike_test.rs  sexpr_test.rs  test.script  test10.script  test11.script  test12.script  test13.script  test14.script  test15.script  test16.script  test2.script  test3.script  test4.script  test5.script  test6.script  test7.script  test8.script  test9.script  texpr_test.rs
examples_tests/: test2.script  test3.script
old/: machine.rs  old_machine.rs
scripts/cexpr/: test16.script  test17.script  test18.script  test19.script
scripts/sexpr/: test.script
scripts/texpr/: test10.script  test11.script  test13.script  test15.script  test2.script  test4.script  test5.script  test7.script  test8.script  test9.script
src/: lib.rs  main.rs
src - Copy/: lib.rs  main.rs
src - Copy (2)/interpreter/: func_context.rs  lib_scope.rs  value.rs
src - Copy (2)/langs/: mod.rs
src - Copy (3)/interpreter/: custom.rs  debug.rs  error.rs  gc_scope.rs  machine.rs
src - Copy/common/: build.rs  error.rs  instruction.rs  mod.rs  types.rs
src - Copy/compiler/: builder.rs  mod.rs
src - Copy/interpreter/: custom.rs  data.rs  func_context.rs  lib_scope.rs  machine.rs  mod.rs  value.rs  var_scope.rs
src/common/: build.rs  error.rs  instruction.rs  loc.rs  mod.rs  types.rs
src/compiler/: builder.rs  mod.rs
src/custom_type/: custom.rs  error.rs  gc.rs  gc_scope.rs  mod.rs  type_info.rs
src/interpreter/: custom.rs  data.rs  debug.rs  error.rs  func_context.rs  (+8 more)
(+357 files in other folders)
