[package]
name = "script_lang"
version = "0.1.13"
edition = "2021"

[dependencies]

#parking_lot = "0.12.1"


[[example]]
name = "sexpr_test"
path = "examples/sexpr_test.rs"

[[example]]
name = "texpr_test"
path = "examples/texpr_test.rs"

[[example]]
name = "cexpr_test"
path = "examples/cexpr_test.rs"

[[example]]
name = "ccexpr_test"
path = "examples/ccexpr_test.rs"
