[package]
name = "script_lang"
version = "0.1.13"
edition = "2021"

[dependencies]

#parking_lot = "0.12.1"


[[example]]
name = "sexpr_test"
path = "examples/sexpr_test.rs"

[[example]]
name = "texpr_test"
path = "examples/texpr_test.rs"

[[example]]
name = "clike_test"
path = "examples/clike_test.rs"
